added beam with collision background

--- a/package.json
+++ b/package.json
@@ -10,13 +10,16 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@react-three/fiber": "^8.17.14",
+    "@tabler/icons-react": "^3.30.0",
     "@tailwindcss/vite": "^4.0.6",
     "clsx": "^2.1.1",
     "framer-motion": "^12.4.3",
     "motion": "^12.4.3",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "tailwind-merge": "^3.0.1"
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "tailwind-merge": "^3.0.1",
+    "three": "^0.173.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.19.0",
