--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "motion": "^12.4.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-router-dom": "^7.2.0",
     "tailwind-merge": "^3.0.1",
     "three": "^0.173.0"
   },
