--- a/package.json
+++ b/package.json
@@ -15,11 +15,13 @@
     "@tailwindcss/vite": "^4.0.6",
     "clsx": "^2.1.1",
     "framer-motion": "^12.4.3",
-    "motion": "^12.4.3",
+    "mini-svg-data-uri": "^1.4.4",
+    "motion": "^12.4.7",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.2.0",
-    "tailwind-merge": "^3.0.1",
+    "simplex-noise": "^4.0.3",
+    "tailwind-merge": "^3.0.2",
     "three": "^0.173.0"
   },
   "devDependencies": {
