--- a/package.json
+++ b/package.json
@@ -15,10 +15,13 @@
     "@tailwindcss/vite": "^4.0.6",
     "clsx": "^2.1.1",
     "framer-motion": "^12.4.3",
+    "i18next": "^24.2.2",
+    "i18next-browser-languagedetector": "^8.0.4",
     "mini-svg-data-uri": "^1.4.4",
     "motion": "^12.4.7",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-i18next": "^15.4.1",
     "react-router-dom": "^7.2.0",
     "simplex-noise": "^4.0.3",
     "tailwind-merge": "^3.0.2",
