--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@tabler/icons-react": "^3.30.0",
     "@tailwindcss/vite": "^4.0.6",
     "clsx": "^2.1.1",
+    "formik": "^2.4.6",
     "framer-motion": "^12.4.3",
     "i18next": "^24.2.2",
     "i18next-browser-languagedetector": "^8.0.4",
@@ -22,10 +23,12 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-i18next": "^15.4.1",
+    "react-icons": "^5.5.0",
     "react-router-dom": "^7.2.0",
     "simplex-noise": "^4.0.3",
     "tailwind-merge": "^3.0.2",
-    "three": "^0.173.0"
+    "three": "^0.173.0",
+    "yup": "^1.6.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.19.0",
