--- a/package.json
+++ b/package.json
@@ -11,9 +11,12 @@
   },
   "dependencies": {
     "@react-three/fiber": "^8.17.14",
+    "@reduxjs/toolkit": "^2.6.1",
     "@tabler/icons-react": "^3.30.0",
     "@tailwindcss/vite": "^4.0.6",
+    "axios": "^1.8.3",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "formik": "^2.4.6",
     "framer-motion": "^12.4.3",
     "i18next": "^24.2.2",
@@ -22,8 +25,10 @@
     "motion": "^12.4.7",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-hot-toast": "^2.5.2",
     "react-i18next": "^15.4.1",
     "react-icons": "^5.5.0",
+    "react-redux": "^9.2.0",
     "react-router-dom": "^7.2.0",
     "simplex-noise": "^4.0.3",
     "tailwind-merge": "^3.0.2",
