--- a/package.json
+++ b/package.json
@@ -12,27 +12,34 @@
   "dependencies": {
     "@react-three/fiber": "^8.17.14",
     "@reduxjs/toolkit": "^2.6.1",
-    "@tabler/icons-react": "^3.30.0",
+    "@tabler/icons-react": "^3.31.0",
     "@tailwindcss/vite": "^4.0.6",
     "axios": "^1.8.3",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
+    "dompurify": "^3.2.4",
     "formik": "^2.4.6",
-    "framer-motion": "^12.4.3",
+    "framer-motion": "^12.5.0",
     "i18next": "^24.2.2",
     "i18next-browser-languagedetector": "^8.0.4",
     "mini-svg-data-uri": "^1.4.4",
-    "motion": "^12.4.7",
+    "motion": "^12.5.0",
+    "primereact": "^10.9.3",
+    "quill": "^2.0.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-helmet-async": "^2.0.5",
     "react-hot-toast": "^2.5.2",
     "react-i18next": "^15.4.1",
     "react-icons": "^5.5.0",
+    "react-quill": "^2.0.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.2.0",
+    "react-toastify": "^11.0.5",
     "simplex-noise": "^4.0.3",
     "tailwind-merge": "^3.0.2",
     "three": "^0.173.0",
+    "toastify": "^2.0.1",
     "yup": "^1.6.1"
   },
   "devDependencies": {
