--- a/package.json
+++ b/package.json
@@ -14,17 +14,21 @@
     "@reduxjs/toolkit": "^2.6.1",
     "@tabler/icons-react": "^3.31.0",
     "@tailwindcss/vite": "^4.0.6",
+    "@tinymce/tinymce-react": "^6.0.0",
     "axios": "^1.8.3",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "dompurify": "^3.2.4",
     "formik": "^2.4.6",
     "framer-motion": "^12.5.0",
+    "highlight.js": "^11.11.1",
     "i18next": "^24.2.2",
     "i18next-browser-languagedetector": "^8.0.4",
     "mini-svg-data-uri": "^1.4.4",
     "motion": "^12.5.0",
     "primereact": "^10.9.3",
+    "prismjs": "^1.30.0",
+    "prismjs-themes": "^2.0.0",
     "quill": "^2.0.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
